logs/compile.log
affichage.c: In function ‘affichePlateauSDL’:
affichage.c:76:27: warning: variable ‘couleur’ set but not used [-Wunused-but-set-variable]
     int largeur, hauteur, couleur;
                           ^
init.c:244:5: error: conflicting types for ‘chercheFourmiliere’
 int chercheFourmiliere(Fourmi *fourmi) {
     ^
In file included from init.c:7:0:
init.h:14:9: note: previous declaration of ‘chercheFourmiliere’ was here
     int chercheFourmiliere(Fourmi *fourmi, Monde *myWorld);
         ^
fourmido.c: In function ‘main’:
fourmido.c:50:9: warning: unused variable ‘premierJoueur’ [-Wunused-variable]
     int premierJoueur = (int) ROUGE;
         ^
